[package]
name = "fillsinkswl"
version = "0.1.0"
edition = "2024"
authors = ["Juho Ervasti <juho.ervasti@gispo.fi>"]
license = "MIT"
description = "Rust implementation of the Fill Sinks algorithm proposed by Wang & Liu"

[dependencies]
gdal = { version = "0.18.0", features = ["ndarray"] }
clap = { version = "4.5.41", features = ["derive"] }
ndarray = "0.16.1"
